--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronautas - Programação</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="programacao.png" alt="">
+    <header class="cabeçalho">
+        <img class="img-cabeçalho" src="programacao.png" alt="">
+        <ul>
+            <li class="item-cabeçalho">Home</li>
+            <li class="item-cabeçalho">HTML e CSS</li>
+        </ul>
     </header>
+
 </body>
 </html>
