--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <li class="item-lista-cabeçalho">HTML e CSS</li>
         </ul>
     </header>
-    <section>
+    <section class="principal">
         <h2>Sobre o Astronautas</h2>
-        <p>
-            O site de programação chamado Astronautas é uma plataforma incrível para programadores de todos os níveis e interesses. Com uma interface intuitiva e moderna, este site oferece uma vasta gama de recursos e ferramentas para ajudá-lo a aprimorar suas habilidades em programação e a construir projetos impressionantes.</p>
-        <p></p>
-        
+        <p class="paragrafo">
+            O site de programação chamado Astronautas é uma plataforma incrível para programadores de todos os níveis e interesses. Com uma interface intuitiva e moderna, este site oferece uma vasta gama de recursos e ferramentas para ajudá-lo a aprimorar suas habilidades em programação e a construir projetos impressionantes.
+        </p>
     </section>
     
 </body>
