--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p class="paragrafo">
             O site de programação chamado Astronautas é uma plataforma incrível para programadores de todos os níveis e interesses. Com uma interface intuitiva e moderna, este site oferece uma vasta gama de recursos e ferramentas para ajudá-lo a aprimorar suas habilidades em programação e a construir projetos impressionantes.
         </p>
+        <img class="imagem-principal" src="Cat astronaut-cuate.png" alt="">
     </section>
     
 </body>
