--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         </ul>
     </header>
     <section class="principal">
-        <h2>Sobre o Astronautas</h2>
-        <p class="paragrafo">
+        <div class="div-principal">
+            <h2>Sobre o Astronautas</h2>
+             <p class="paragrafo">
             O site de programação chamado Astronautas é uma plataforma incrível para programadores de todos os níveis e interesses. Com uma interface intuitiva e moderna, este site oferece uma vasta gama de recursos e ferramentas para ajudá-lo a aprimorar suas habilidades em programação e a construir projetos impressionantes.
-        </p>
+              </p>
+        </div>
+        
         <img class="imagem-principal" src="Cat astronaut-cuate.png" alt="">
     </section>
     
